[package]
name = "stream"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
url = "2.5.0"
jsonwebtoken = "8.0"
once_cell = "1.8"
anyhow = "1.0.79"
dotenv = "0.15.0"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "postgres", "macros"] }
